--- a/imagerecognition.vuforia/src/main/res/layout/activity_vuforia.xml
+++ b/imagerecognition.vuforia/src/main/res/layout/activity_vuforia.xml
@@ -3,9 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".VuforiaActivity"
+    >
 
-  <include layout="@layout/ir_toolbar_view"/>
+  <include layout="@layout/view_toolbar"/>
 
   <!--This is the layout 4 add GLView from Vuforia-->
   <RelativeLayout
