Fix: somethings not work since kt ;(

--- a/imagerecognition.vuforia/src/main/res/layout/ir_activity_vuforia.xml
+++ b/imagerecognition.vuforia/src/main/res/layout/ir_activity_vuforia.xml
@@ -17,7 +17,7 @@
     <ImageView
         android:id="@+id/scan_line"
         android:layout_width="match_parent"
-        android:layout_height="50px"
+        android:layout_height="5dp"
         android:src="@drawable/ir_scanline"
         android:scaleType="fitXY"/>
     <!--This is a OverlayLayout 4 put the Ox Watermark-->
