--- a/app/src/main/res/layout/activity_imagerecognizer.xml
+++ b/app/src/main/res/layout/activity_imagerecognizer.xml
@@ -38,7 +38,7 @@
         android:id="@+id/imagerecognizer_code_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="****************************"/>
 
     <Button
         android:id="@+id/start_vuforia_button"
